Test for 8K resolutions in H264, add VP8/9 resolution testing.

This expands the Windows hardware decoder to allow up to 8K
hardware decoding for both VP8/9 and H264.

BUG=728296
TEST=tbd

Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: Ia56aa19fec6a8e6cb0694992eb0b69f453d4768e